--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
 }
