--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "fs": "^0.0.1-security",
+    "image-base64": "^1.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
